# ultimate-tic-tac-toe

./: .gitignore  Cargo.toml  README.md
axum-serve/: Cargo.toml
axum-serve/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
minimax/: Cargo.toml  build.rs
minimax/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
web-client/: Cargo.toml  index.html
