[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
nom = "7.1.3"
ratatui = "0.25.0"
rayon = "1.8.0"
