workspace = { members = ["axum-serve"] }
[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dashmap = { version = "5.5.3", features = ["rayon"] }
leptos = { version = "0.5.6", features = ["csr", "nightly"] }
nom = "7.1.3"
rayon = "1.8.0"
serde = "1.0.195"
wasm-bindgen-rayon = "1.2.1"
web-sys = { version = "0.3.67", features = ["Window", "Navigator"] }
