[package]
name = "minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
phf = "0.11.2"
rayon = "1.8.1"
ultimate-tic-tac-toe = { path = "../" }

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
ultimate-tic-tac-toe = { path = "../" }
