[package]
name = "web-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.6", features = ["csr", "nightly"] }
ultimate-tic-tac-toe = { path = "../" }
serde = { version = "1.0.195", features = ["derive"] }
reqwasm = "0.5.0"
serde_json = "1.0.111"
